@@ -1,4 +1,4 @@
-// Copyright (C) 2004 - 2009 Philip Aston
+// Copyright (C) 2004 - 2011 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -41,19 +41,27 @@ import net.grinder.engine.process.WorkerProcessEntryPoint;
  */
 final class WorkerProcessCommandLine {
 
+  private static final String AGENT_JAR_FILENAME = "grinder-agent.jar";
+
   private final List<String> m_command;
   private final int m_commandClassIndex;
 
   public WorkerProcessCommandLine(GrinderProperties properties,
                                   Properties systemProperties,
-                                  File agent,
                                   String jvmArguments) {
 
     m_command = new ArrayList<String>();
     m_command.add(properties.getProperty("grinder.jvm", "java"));
 
-    if (agent != null) {
-      m_command.add("-javaagent:" + agent.getAbsolutePath());
+    final String systemClasspath =
+      systemProperties.getProperty("java.class.path");
+
+    if (systemClasspath != null) {
+      final File agent = findAgentJarFile(systemClasspath);
+
+      if (agent != null) {
+        m_command.add("-javaagent:" + agent.getAbsolutePath());
+      }
     }
 
     if (jvmArguments != null) {
@@ -61,27 +69,26 @@ final class WorkerProcessCommandLine {
       final StringTokenizer tokenizer = new StringTokenizer(jvmArguments);
 
       while (tokenizer.hasMoreTokens()) {
-        m_command.add(tokenizer.nextToken());
+        final String token = tokenizer.nextToken();
+
+        m_command.add(token);
       }
     }
 
     final String additionalClasspath =
       properties.getProperty("grinder.jvm.classpath", null);
 
-    final String systemClasspath =
-      systemProperties.getProperty("java.class.path");
-
-    final StringBuffer classpath = new StringBuffer();
+    final StringBuilder classpath = new StringBuilder();
 
     if (additionalClasspath != null) {
       classpath.append(additionalClasspath);
     }
 
-    if (additionalClasspath != null && systemClasspath != null) {
-      classpath.append(File.pathSeparatorChar);
-    }
-
     if (systemClasspath != null) {
+      if (classpath.length() > 0) {
+        classpath.append(File.pathSeparatorChar);
+      }
+
       classpath.append(systemClasspath);
     }
 
@@ -136,5 +143,24 @@ final class WorkerProcessCommandLine {
     }
 
     return buffer.toString();
+  }
+
+  /**
+   * Package scope for unit tests.
+   *
+   * @param path The path to search.
+   */
+  static File findAgentJarFile(String path) {
+
+    for (String pathEntry : path.split(File.pathSeparator)) {
+      final File siblingFile =
+        new File(new File(pathEntry).getParent(), AGENT_JAR_FILENAME);
+
+      if (siblingFile.exists()) {
+        return siblingFile;
+      }
+    }
+
+    return null;
   }
 }
