@@ -1,4 +1,4 @@
-// Copyright (C) 2004 - 2009 Philip Aston
+// Copyright (C) 2004 - 2011 Philip Aston
 // All rights reserved.
 //
 // This file is part of The Grinder software distribution. Refer to
@@ -67,7 +67,7 @@ public class TestProcessWorkerFactory extends TestCase {
 
     final WorkerProcessCommandLine commandLine =
       new WorkerProcessCommandLine(
-        grinderProperties, systemProperties, null, "");
+        grinderProperties, systemProperties, "");
 
     final List<String> commandList = commandLine.getCommandList();
 
